--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>星辰书院1.2</title>
-        <link type="text/css" rel="stylesheet" href="css/style.css">
-        <link rel="icon" href="img/logo.png" type="image/x-icon"/>
+        <link type="text/css" rel="stylesheet" href="https://cdn.retiehe.com/cached-65f3b80ee8f19e27db5853a025145cae/xingzhan/muban/novel1/css/style.css">
+        <link rel="icon" href="img/logo.png" type="image/x-icon">
     </head>
     <body>
         <div id="nav">
@@ -60,7 +60,7 @@
                <div style="clear:both;"></div>
                </div>
            </div>
-           <a href="#"><img src="img/上仙，时代变了.png" /></a>
+           <a href="#"><img src="https://cdn.retiehe.com/cached-ff739696df97ce524234e547a164cc6b/xingzhan/muban/novel1/img/%E4%B8%8A%E4%BB%99%EF%BC%8C%E6%97%B6%E4%BB%A3%E5%8F%98%E4%BA%86.png"></a>
            <div class="right">
                <div class="color1">
                 <h4>热门资讯</h4>
@@ -74,16 +74,16 @@
        </div>
        <div id="books">
            <div class="tui">
-               <img src="img/cover1.png" />
+               <img src="https://cdn.retiehe.com/cached-cfed58a5c30b3f7061c33fc8b881da3e/xingzhan/muban/novel1/img/cover1.png">
                <h2>上仙，时代变了</h2>
                <h3>三千星斩·著</h3>
-               <div class="wen">作品简介：<br />李博闻：我的愿望是<del>修仙界核平</del><br />让每个修士都能享受科技带来的乐趣！</div>
+               <div class="wen">作品简介：<br>李博闻：我的愿望是<del>修仙界核平</del><br>让每个修士都能享受科技带来的乐趣！</div>
            </div>
            <div class="tui">
-               <img src="img/cover2.png" />
+               <img src="https://cdn.retiehe.com/cached-778c2aef9a5be1cf790350e90a62920b/xingzhan/muban/novel1/img/cover2.png">
                <h2>文娱之巅</h2>
                <h3>三千星斩·著</h3>
-               <div class="wen">作品简介：<br />“你已经是一个成熟的穿越者了，要学会自己用马甲打败自己了。” 这是一个穿越者在异界搅动风云，以文娱证道的故事。</div>
+               <div class="wen">作品简介：<br>“你已经是一个成熟的穿越者了，要学会自己用马甲打败自己了。” 这是一个穿越者在异界搅动风云，以文娱证道的故事。</div>
            </div>
        </div>
        <div id="footer">
