--- a/book/1/1.html
+++ b/book/1/1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>杜珞宁传-三千星斩 星辰书院</title>
-		<link type="text/css" rel="stylesheet" href="../css/bookstyle.css">
+		<link type="text/css" rel="stylesheet" href="../../css/bookstyle.css">
 		<link rel="icon" href="../img/logo.png" type="image/x-icon"/>
 	</head>
 	<body>
