--- a/book/1/1.html
+++ b/book/1/1.html
@@ -34,17 +34,11 @@
 		</div>
 		<div class="Footer">
 					<div class="footer_nav">
-						<a href="../about.html">关于星辰书院</a>&#12288;|&#12288;
-						<a>商务合作</a>&#12288;|&#12288;
-						<a>友情链接</a>&#12288;|&#12288;
-						<a>帮助中心</a>&#12288;|&#12288;
-						<a>用户守则</a>&#12288;|&#12288;
-						<a>网站地图</a>&#12288;|&#12288;
-						<a>诚聘精英</a>&#12288;|&#12288;
-						<a>XingZhan</a>
+						<a href="https://sanqianzzz.github.io/xingchen">星辰书院</a>&#12288;|&#12288;
+						<a href="https://sanqianzzz.github.io">三千星斩的博客</a>
 					</div>
 					<p>
-						<a>Copyright (C) 2019-2020 starcutc.com All Rights Reserved </a>
+						<a>Copyright (C) 2019-2020 星斩工作室ToKillTheStars All Rights Reserved </a>
 						<br />
 					</p>
 	</body>
