--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>星辰书院1.2</title>
-        <link type="text/css" rel="stylesheet" href="https://cdn.retiehe.com/cached-65f3b80ee8f19e27db5853a025145cae/xingzhan/muban/novel1/css/style.css">
+        <link type="text/css" rel="stylesheet" href="css/style.css">
         <link rel="icon" href="img/logo.png" type="image/x-icon">
     </head>
     <body>
@@ -38,7 +38,7 @@
                <div class="color1">
                <h4>奇幻</h4>
                <ul>
-                   <li><a href="#">xxx</a></li>
+                   <li><a href="book/1/index.html">神兽学院</a></li>
                    <li><a href="#">xxx</a></li>
                </ul>
                <div style="clear:both;"></div>
