--- a/book/1/index.html
+++ b/book/1/index.html
@@ -4,7 +4,7 @@
 		<title>神兽学院 星辰书院</title>
 		<link type="text/css" rel="stylesheet" href="../../css/bookstyle.css">
 		<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.6.4/jquery.min.js"></script>
-		<link rel="icon" href="../img/logo.png" type="image/x-icon"/>
+		<link rel="icon" href="../../img/logo.png" type="image/x-icon"/>
 	</head>
 	<body>
 		<div id="header">
@@ -52,11 +52,11 @@
     	<div class="shang_payselect">
     		<div class="pay_item checked" data-id="zhifubao">
 	    		<span class="radiobox"></span>
-	    		<span class="pay_logo"><img src="../img/zhifubao.jpg" alt="支付宝" /></span>
+	    		<span class="pay_logo"><img src="../../img/zhifubao.jpg" alt="支付宝" /></span>
     		</div>
     		<div class="pay_item" data-id="weixin">
 	    		<span class="radiobox"></span>
-	    		<span class="pay_logo"><img src="../img/weixin.jpg" alt="微信" /></span>
+	    		<span class="pay_logo"><img src="../../img/weixin.jpg" alt="微信" /></span>
     		</div>
     	</div>
     	<div class="shang_info">
@@ -70,7 +70,7 @@
     	$(".pay_item").click(function(){
     		$(this).addClass('checked').siblings('.pay_item').removeClass('checked');
     		var dataid=$(this).attr('data-id');
-    		$(".shang_payimg img").attr("src","../img/"+dataid+"img.jpg");
+    		$(".shang_payimg img").attr("src","../../img/"+dataid+"img.jpg");
     		$("#shang_pay_txt").text(dataid=="zhifubao"?"支付宝":"微信");
     	});
     });
