--- a/book/1/index.html
+++ b/book/1/index.html
@@ -40,13 +40,13 @@
     <p><a href="javascript:void(0)" onclick="dashangToggle()" class="dashang" title="打赏作者">打赏</a></p>
     <div class="hide_box"></div>
     <div class="shang_box">
-    	<a class="shang_close" href="javascript:void(0)" onclick="dashangToggle()" title="关闭"><img src="../img/close.jpg" alt="取消" /></a>
+    	<a class="shang_close" href="javascript:void(0)" onclick="dashangToggle()" title="关闭"><img src="../../img/close.jpg" alt="取消" /></a>
        
     	<div class="shang_tit">
     		<p>感谢您对作者的支持！</p>
     	</div>
     	<div class="shang_payimg">
-    		<img src="../img/zhifubaoimg.jpg" alt="扫码支持" title="扫一扫" />
+    		<img src="../../img/zhifubaoimg.jpg" alt="扫码支持" title="扫一扫" />
     	</div>
     		<div class="pay_explain">扫码打赏</div>
     	<div class="shang_payselect">
