--- a/book/1/index.html
+++ b/book/1/index.html
@@ -61,7 +61,7 @@
     	</div>
     	<div class="shang_info">
     		<p>打开<span id="shang_pay_txt">支付宝</span>扫一扫，即可进行扫码打赏哦</p>
-    		<p><a href="../index.html" target="_blank">星辰书院</a>将抽取20%的打赏金额</p>
+    		<p><a href="../../index.html" target="_blank">星辰书院</a>将抽取20%的打赏金额</p>
     	</div>
     </div>
     </div>
