--- a/book/1/1.html
+++ b/book/1/1.html
@@ -34,7 +34,7 @@
 		</div>
 		<div class="Footer">
 					<div class="footer_nav">
-						<a href="https://sanqianzzz.github.io/xingchen">星辰书院</a>&#12288;|&#12288;
+						<a href="../../index.html">星辰书院</a>&#12288;|&#12288;
 						<a href="https://sanqianzzz.github.io">三千星斩的博客</a>
 					</div>
 					<p>
