--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
         <link type="text/css" rel="stylesheet" href="css/style.css">
         <link rel="icon" href="img/logo.png" type="image/x-icon">
         <script type="text/javascript">
-            is_mobile();
-            function is_mobile() {
-                var ua = navigator.userAgent;
-                var url = window.location.host;
-                var ipad = ua.match(/(iPad).*OS\s([\d_]+)/),
-                    isIphone =!ipad && ua.match(/(iPhone\sOS)\s([\d_]+)/),
-                    isAndroid = ua.match(/(Android)\s+([\d.]+)/),
-                    isMobile = isIphone || isAndroid;
-                if(! isMobile){
-                    window.location.href = "m.html";
-                }
-            }
+            console.log(navigator.userAgent);
+				var os = function() {
+    			var ua = navigator.userAgent,
+      			isWindowsPhone = /(?:Windows Phone)/.test(ua),
+       	 		isSymbian = /(?:SymbianOS)/.test(ua) || isWindowsPhone,
+        		isAndroid = /(?:Android)/.test(ua),
+        		isFireFox = /(?:Firefox)/.test(ua),
+        		isChrome = /(?:Chrome|CriOS)/.test(ua),
+        		isTablet = /(?:iPad|PlayBook)/.test(ua) || (isAndroid && !/(?:Mobile)/.test(ua)) || (isFireFox && /(?:Tablet)/.test(ua)),
+        		isPhone = /(?:iPhone)/.test(ua) && !isTablet,
+        		isPc = !isPhone && !isAndroid && !isSymbian;
+    			return {
+        		isTablet: isTablet,
+        		isPhone: isPhone,
+        		isAndroid: isAndroid,
+        		isPc: isPc
+    			};
+				}();
+
+				if(os.isAndroid || os.isPhone) {
+    				window.location.href="m.html"       
+				} else if(os.isTablet) {
+    				
+				} else if(os.isPc) {
+    				
+				}
         </script>
     </head>
     <body>
