--- a/book/1/mindex.html
+++ b/book/1/mindex.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="../../css/mstyle.css">
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <meta charset="UTF-8">
+        <title>神兽学院 星辰书院</title>
+        <link rel="icon" href="../../img/logo.png" type="image/x-icon">
     </head>
     <body>
         <div data-role="page" id="first">
