修改跳转问题

--- a/m.html
+++ b/m.html
@@ -22,7 +22,7 @@
                 </form>
                 <br>
                 <ul data-role="listview" data-filter="true" data-input="#search">
-                    <li><a href="https://sanqianzzz.github.io/xingchen/book/1/mindex.html">神兽学院</a></li>
+                    <li><a href="book/1/mindex.html" data-ajax="false">神兽学院</a></li>
                     <li>
                         <a href="#">
                             <img width="89px" height="124px" src="https://cdn.retiehe.com/cached-778c2aef9a5be1cf790350e90a62920b/xingzhan/muban/novel1/img/cover2.png"/>
@@ -47,7 +47,7 @@
                 </ul>
             </div>
             <div data-role="footer">
-                <h1>星斩工作室 版权所有 <a class="a" href="https://sanqianzzz.github.io/xingchen">电脑版</a></h1>
+                <h1>星斩工作室 版权所有 <a class="a" href="index.html" data-ajax="false">电脑版</a></h1>
             </div>
         </div>
     </body>
