--- a/book/1/mindex.html
+++ b/book/1/mindex.html
@@ -25,19 +25,19 @@
                 <div data-role="collapsible">
                     <h1>正文卷</h1>
                     <ul data-role="listview">
-                        <li><a href="https://sanqianzzz.github.io/xingchen/book/1/1.html">第一章 意外访客</a></li>
-                        <li><a href="https://sanqianzzz.github.io/xingchen/book/1/2.html">第二章 那条通往学校的路</a></li>
-                        <li><a href="https://sanqianzzz.github.io/xingchen/book/1/3.html">第三章 两位新朋友</a></li>
-                        <li><a href="https://sanqianzzz.github.io/xingchen/book/1/4.html">第四章 魔法森林里的一扇门</a></li>
-                        <li><a href="https://sanqianzzz.github.io/xingchen/book/1/5.html">第五章 新生分学院</a></li>
-                        <li><a href="https://sanqianzzz.github.io/xingchen/book/1/6.html">第六章 雪拉和金环</a></li>
-                        <li><a href="https://sanqianzzz.github.io/xingchen/book/1/7.html">第七章 凤凰箭雨</a></li>
+                        <li><a href="1.html" data-ajax="false">第一章 意外访客</a></li>
+                        <li><a href="2.html" data-ajax="false">第二章 那条通往学校的路</a></li>
+                        <li><a href="3.html" data-ajax="false">第三章 两位新朋友</a></li>
+                        <li><a href="4.html" data-ajax="false">第四章 魔法森林里的一扇门</a></li>
+                        <li><a href="5.html" data-ajax="false">第五章 新生分学院</a></li>
+                        <li><a href="6.html" data-ajax="false">第六章 雪拉和金环</a></li>
+                        <li><a href="7.html" data-ajax="false">第七章 凤凰箭雨</a></li>
 
                     </ul>
                 </div>
             </div>
             <div data-role="footer">
-                <h1>星斩工作室 版权所有 <a class="a" href="https://sanqianzzz.github.io/xingchen">电脑版</a></h1>
+                <h1>星斩工作室 版权所有 <a class="a" href="index.html" data-ajax="false">电脑版</a></h1>
             </div>
         </div>
     </body>
