--- a/book/1/index.html
+++ b/book/1/index.html
@@ -5,6 +5,31 @@
 		<link type="text/css" rel="stylesheet" href="../../css/bookstyle.css">
 		<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.6.4/jquery.min.js"></script>
 		<link rel="icon" href="../../img/logo.png" type="image/x-icon"/>
+		<script type="text/javascript">
+            console.log(navigator.userAgent);
+			var os = function() {
+    		var ua = navigator.userAgent,
+      		isWindowsPhone = /(?:Windows Phone)/.test(ua),
+       	 	isSymbian = /(?:SymbianOS)/.test(ua) || isWindowsPhone,
+        	isAndroid = /(?:Android)/.test(ua),
+        	isFireFox = /(?:Firefox)/.test(ua),
+        	isChrome = /(?:Chrome|CriOS)/.test(ua),
+        	isTablet = /(?:iPad|PlayBook)/.test(ua) || (isAndroid && !/(?:Mobile)/.test(ua)) || (isFireFox && /(?:Tablet)/.test(ua)),
+        	isPhone = /(?:iPhone)/.test(ua) && !isTablet,
+        	isPc = !isPhone && !isAndroid && !isSymbian;
+    		return {
+        	isTablet: isTablet,
+        	isPhone: isPhone,
+        	isAndroid: isAndroid,
+        	isPc: isPc
+    		};
+			}();
+			if(os.isAndroid || os.isPhone) {
+    			window.location.href="mindex.html"       
+			} else if(os.isTablet) {	
+			} else if(os.isPc) {
+			}
+        </script>
 	</head>
 	<body>
 		<div id="header">
