--- a/book/1/mindex.html
+++ b/book/1/mindex.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div data-role="footer">
-                <h1>星斩工作室 版权所有 <a class="a" href="index.html" data-ajax="false">电脑版</a></h1>
+                <h1>星斩工作室 版权所有 <a class="a" href="../../index.html" data-ajax="false">电脑版</a></h1>
             </div>
         </div>
     </body>
