--- a/writer/1.html
+++ b/writer/1.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>三千星斩 星辰书院</title>
+    </head>
+    <body>
+        <script>
+            window.location.href='https://sanqianzzz.github.io';
+        </script>
+    </body>
 </html>
