--- a/index.html
+++ b/index.html
@@ -108,5 +108,14 @@
 			</div>
 		</div>
 	</div>
+	<div id="footer">
+		<ul id="footerlist">
+			<li><a href="#">关于我们</a></li>
+			<li><a href="#">文章投稿</a></li>
+			<li><a href="#">联系我们</a></li>
+		</ul>
+		<br /><br />
+		<p>Copyright©2020~2021 学而思编程社区星斩工作室 All rights Reserved</p>
+	</div>
 </body> 
 </html>
