--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				</div>
 				<div class="novel">
 					<h3><a href="#">社区江湖</a></h3>
-					<p>刘乙未朝着笛声来源看去，一个深蓝色头发的少年，身着蓝色的衣服，眼睛里蓝黄交错，仿佛有一篇星河。</p>
+					<p>刘乙未朝着笛声来源看去，一个深蓝色头发的少年，身着蓝色的衣服，眼睛里蓝黄交错，仿佛有一片星河。</p>
 				</div>
 				<div class="novel">
 					<h3><a href="#">MAGIC WORLD</a></h3>
