--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 				</ul>
 			</div>
 		</div>
+		<div id="bookt3">
+			<h2>分类频道</h2>
+			<div class="novellist">
+				<h3>金色穹顶工作室</h3>
+			</div>
+		</div>
 		<div id="bookt2">
 			<h2>新书尝鲜</h2>
 			<script language="javascript" src="js/jquery.js"></script>
