--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		</div>
 	</div>
     <ul id="list"> 
+		<li><a href="#">妖灵记</a></li> 
         <li><a href="#">杜珞宁传</a></li> 
         <li><a href="#">神兽学院</a></li> 
 		<li><a href="#">文娱之巅</a></li>
@@ -102,7 +103,64 @@
 		<div id="bookt3">
 			<h2>分类频道</h2>
 			<div class="novellist">
+				<h3>星斩文学</h3>
+				<ul class="list2">
+					<li class="first">
+						<div class="listimg">
+							<a href="book/1.html"><img src="https://cdn.retiehe.com/cached-778c2aef9a5be1cf790350e90a62920b/xingzhan/muban/novel1/img/cover2.png" /></a>
+						</div>
+						<div class="listinformation">
+							<span class="name"><a href="book/1.html">文娱之巅</a></span>
+							<p>“你已经是一个成熟的穿越者了，要学会自己用马甲打败自己了。” <br>这是一个穿越者在异界搅动风云，以文娱证道的故事。</p>
+						</div>
+					</li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[仙侠]</a></span><span class="thename"><a href="book/2.html" >上仙，时代变了</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+				</ul>
+			</div>
+			<div class="novellist">
 				<h3>金色穹顶工作室</h3>
+				<ul class="list2">
+					<li class="first">
+						<div class="listimg">
+							<a href="book/1.html"><img src="img/nocover.jpg" /></a>
+						</div>
+						<div class="listinformation">
+							<span class="name"><a href="book/1.html">神兽学院</a></span>
+							<p>她喊到第二次的时候，一只浑身银白，额前长着金色的细角的小马从她身边凭空冒出。</p>
+						</div>
+					</li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[仙侠]</a></span><span class="thename"><a href="book/2.html" >小学生奇幻冒险之天地宝鉴</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+				</ul>
+			</div>
+			<div class="novellist">
+				<h3>独醉巅峰工作室</h3>
+				<ul class="list2">
+					<li class="first">
+						<div class="listimg">
+							<a href="book/1.html"><img src="img/nocover.jpg" /></a>
+						</div>
+						<div class="listinformation">
+							<span class="name"><a href="book/1.html">妖灵记</a></span>
+							<p>连绵不断的圣魔山脉，阳光透过山峦之间的空隙，照射进深邃的峡谷。峡谷旁边的半山腰上，残留着些许积雪。</p>
+						</div>
+					</li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+					<li><span class="thekind"><a href="fenlei/xianxia.html" >[未知]</a></span><span class="thename"><a href="book/2.html" >虚位以待</a></span></li>
+				</ul>
 			</div>
 		</div>
 		<div id="bookt2">
