--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	            	document.querySelector("#list").style.display="block";
 	        };
 	        inputs.onblur = function () {
-	            document.querySelector("#list").style.display="none";
+				setTimeout("document.querySelector(\"#list\").style.display=\"none\"",99);
 	        };
 	    }
 	</script>
