--- a/book/1.html
+++ b/book/1.html
@@ -21,7 +21,7 @@
 			<li><a href="#">妖灵记</a></li> 
 			<li><a href="#">杜珞宁传</a></li> 
 			<li><a href="#">神兽学院</a></li> 
-			<li><a href="#">文娱之巅</a></li>
+			<li><a href="book/1.html">文娱之巅</a></li>
 			<li><a href="#">社区江湖</a></li> 
 			<li><a href="#">子弹轨迹</a></li>
 			<li><a href="#">MAGIC WORLD</a></li> 
@@ -37,7 +37,7 @@
 						document.querySelector("#list").style.display="block";
 				};
 				inputs.onblur = function () {
-					document.querySelector("#list").style.display="none";
+					setTimeout("document.querySelector(\"#list\").style.display=\"none\"",99);
 				};
 			}
 		</script>
