--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>星辰书院</title> 
+	<title>星辰书院3.0</title> 
 	<link rel="stylesheet" href="css/style.css">
 	<script src="http://code.jquery.com/jquery-1.4.2.min.js"></script> 
 	<script src="js/search.js"></script> 
