--- a/book/1.html
+++ b/book/1.html
@@ -18,15 +18,15 @@
 			</div>
 		</div>
 		<ul id="list"> 
-			<li><a href="#">妖灵记</a></li> 
-			<li><a href="#">杜珞宁传</a></li> 
-			<li><a href="#">神兽学院</a></li> 
+			<li><a href="9.html">妖灵记</a></li> 
+			<li><a href="4.html">杜珞宁传</a></li> 
+			<li><a href="5.html">神兽学院</a></li> 
 			<li><a href="1.html">文娱之巅</a></li>
-			<li><a href="#">社区江湖</a></li> 
-			<li><a href="#">子弹轨迹</a></li>
-			<li><a href="#">MAGIC WORLD</a></li> 
-			<li><a href="#">上仙，时代变了</a></li> 
-			<li><a href="#">小学生奇幻冒险之天地宝鉴</a></li>
+			<li><a href="6.html">社区江湖</a></li> 
+			<li><a href="7.html">子弹轨迹</a></li>
+			<li><a href="8.html">MAGIC WORLD</a></li> 
+			<li><a href="2.html">上仙，时代变了</a></li> 
+			<li><a href="3.html">小学生奇幻冒险之天地宝鉴</a></li>
 		</ul> 
 		<script>
 			window.onload = function () {
