--- a/book/10.html
+++ b/book/10.html
@@ -45,7 +45,7 @@
 			<div id="box">
 				<div id="book">
 					<div id="bookcover">
-						<a href="#"><img src="../img/nocover.jpg" /></a>
+						<a href="#"><img src="../cover/10.jpg" /></a>
 					</div>
 					<div id="info">
 						<span id="name"><h2>冰清玉洁</h2></span>
