--- a/book/1.html
+++ b/book/1.html
@@ -76,6 +76,7 @@
 								<li><a href="../chapter/8.html">第八章 抄袭</a></li>
 							</ul>
 						</div>
+						<div style="clear: both;"></div>
 					</div>
 				</div>
 			</div>
