--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 				</div>
 				<div class="book">
 					<div class="book_img">
-						<a href="book/2.html"><img src="https://cdn.retiehe.com/cached-cfed58a5c30b3f7061c33fc8b881da3e/xingzhan/muban/novel1/img/cover1.png" /></a>
+						<a href="book/11.html"><img src="cover/nocover.jpg" /></a>
 					</div>
 					<div class="book_information">
-						<span class="name"><a href="book/2.html">上仙，时代变了</a></span>
-						<p>李博闻：我的愿望是让每个修士都能享受科技带来的乐趣！</p>
-						<div class="book_footer"><a href="fenlei/xianxia.html" class="kind">仙侠</a><a href="writer/1.html" class="writer" target="_blank">三千星斩</a></div>
+						<span class="name"><a href="book/11.html">层世界</a></span>
+						<p>曾几何时，我设想过一个世界。那是一个能让我任意修改的世界。</p>
+						<div class="book_footer"><a href="fenlei/kehuan.html" class="kind">科幻</a><a href="writer/4.html" class="writer" target="_blank">张子辰</a></div>
 					</div>
 				</div>
 				<div class="book">
@@ -127,7 +127,7 @@
 				<ul class="list2">
 					<li class="first">
 						<div class="listimg">
-							<a href="book/1.html"><img src="img/nocover.jpg" /></a>
+							<a href="book/1.html"><img src="cover/nocover.jpg" /></a>
 						</div>
 						<div class="listinformation">
 							<span class="name"><a href="book/1.html">神兽学院</a></span>
@@ -147,7 +147,7 @@
 				<ul class="list2">
 					<li class="first">
 						<div class="listimg">
-							<a href="book/1.html"><img src="img/nocover.jpg" /></a>
+							<a href="book/1.html"><img src="cover/nocover.jpg" /></a>
 						</div>
 						<div class="listinformation">
 							<span class="name"><a href="book/1.html">妖灵记</a></span>
