--- a/book/10.html
+++ b/book/10.html
@@ -67,6 +67,7 @@
 							<h3>正文卷</h3>
 							<ul>
 								<li><a href="../chapter/10.html">第一章 见面</a></li>
+								<li><a href="../chapter/22.html">第二章 重生</a></li>
 							</ul>
 						</div>
 						<div style="clear: both;"></div>
