--- a/book/10.html
+++ b/book/10.html
@@ -68,6 +68,8 @@
 							<ul>
 								<li><a href="../chapter/10.html">第一章 见面</a></li>
 								<li><a href="../chapter/22.html">第二章 重生</a></li>
+								<li><a href="../chapter/23.html">第三章 上学</a></li>
+								<li><a href="../chapter/24.html">第四章 陆修洁</a></li>
 							</ul>
 						</div>
 						<div style="clear: both;"></div>
