--- a/book/10.html
+++ b/book/10.html
@@ -51,7 +51,7 @@
 						<span id="name"><h2>冰清玉洁</h2></span>
 						<span id="writer"><a href="../writer/3.html">孤独的猫</a>&nbsp;&nbsp;著</span>
 						<p>一个凄惨的故事，因为女主和神奇的皇族公主扯上关系改变了一切，还有公主和王子的爱情故事，少女和总裁的爱情故事</p>
-						<a href="../chapter/10.html" class="button">开始阅读</a>
+						<a href="../chapter/10-1.html" class="button">开始阅读</a>
 						<a href="#" class="button">加入书架</a>
 					</div>
 					<div style="clear: both;"></div>
@@ -66,10 +66,10 @@
 						<div class="volume">
 							<h3>正文卷</h3>
 							<ul>
-								<li><a href="../chapter/10.html">第一章 见面</a></li>
-								<li><a href="../chapter/22.html">第二章 重生</a></li>
-								<li><a href="../chapter/23.html">第三章 上学</a></li>
-								<li><a href="../chapter/24.html">第四章 陆修洁</a></li>
+								<li><a href="../chapter/10-1.html">第一章 见面</a></li>
+								<li><a href="../chapter/10-2.html">第二章 重生</a></li>
+								<li><a href="../chapter/10-3.html">第三章 上学</a></li>
+								<li><a href="../chapter/10-4.html">第四章 陆修洁</a></li>
 							</ul>
 						</div>
 						<div style="clear: both;"></div>
