--- a/book/1.html
+++ b/book/1.html
@@ -51,7 +51,7 @@
 						<span id="name"><h2>文娱之巅</h2></span>
 						<span id="writer"><a href="../writer/1.html">三千星斩</a>&nbsp;&nbsp;著</span>
 						<p>“你已经是一个成熟的穿越者了，要学会自己用马甲打败自己了。” <br>这是一个穿越者在异界搅动风云，以文娱证道的故事。</p>
-						<a href="../chapter/1.html" class="button">开始阅读</a>
+						<a href="../chapter/1-1.html" class="button">开始阅读</a>
 						<a href="#" class="button">加入书架</a>
 					</div>
 					<div style="clear: both;"></div>
@@ -59,21 +59,21 @@
 						<div class="volume">
 							<h3>作品相关</h3>
 							<ul>
-								<li><a href="../chapter/9.html">前言</a></li>
+								<li><a href="../chapter/1-0.html">前言</a></li>
 							</ul>
 						</div>
 						<div style="clear:both;"></div>
 						<div class="volume">
 							<h3>正文卷</h3>
 							<ul>
-								<li><a href="../chapter/1.html">第一章 剑吼西风</a></li>
-								<li><a href="../chapter/2.html">第二章 顾飞老师</a></li>
-								<li><a href="../chapter/3.html">第三章 屠尽天下断章狗</a></li>
-								<li><a href="../chapter/4.html">第四章 爸爸妈妈</a></li>
-								<li><a href="../chapter/5.html">第五章 小孩子才做选择</a></li>
-								<li><a href="../chapter/6.html">第六章 高人竟在我身边</a></li>
-								<li><a href="../chapter/7.html">第七章 这一生关于你的风景</a></li>
-								<li><a href="../chapter/8.html">第八章 抄袭</a></li>
+								<li><a href="../chapter/1-1.html">第一章 剑吼西风</a></li>
+								<li><a href="../chapter/1-2.html">第二章 顾飞老师</a></li>
+								<li><a href="../chapter/1-3.html">第三章 屠尽天下断章狗</a></li>
+								<li><a href="../chapter/1-4.html">第四章 爸爸妈妈</a></li>
+								<li><a href="../chapter/1-5.html">第五章 小孩子才做选择</a></li>
+								<li><a href="../chapter/1-6.html">第六章 高人竟在我身边</a></li>
+								<li><a href="../chapter/1-7.html">第七章 这一生关于你的风景</a></li>
+								<li><a href="../chapter/1-8.html">第八章 抄袭</a></li>
 							</ul>
 						</div>
 						<div style="clear: both;"></div>
