--- a/book/11.html
+++ b/book/11.html
@@ -51,7 +51,7 @@
 						<span id="name"><h2>层世界</h2></span>
 						<span id="writer"><a href="../writer/4.html">张子辰</a>&nbsp;&nbsp;著</span>
 						<p>曾几何时，我设想过一个世界。<br />那是一个能让我任意修改的世界。</p>
-						<a href="../chapter/11.html" class="button">开始阅读</a>
+						<a href="../chapter/11-1.html" class="button">开始阅读</a>
 						<a href="#" class="button">加入书架</a>
 					</div>
 					<div style="clear: both;"></div>
@@ -59,27 +59,27 @@
                         <div class="volume">
                             <h3>第一节点 曾经</h3>
                             <ul>
-                                <li><a href="../chapter/11.html">C-0 日记录</a></li>
-                                <li><a href="../chapter/12.html">C-1 哥妹俩</a></li>
-                                <li><a href="../chapter/13.html">C-2 关于Online</a></li>
-                                <li><a href="../chapter/14.html">C-3 新世界</a></li>
+                                <li><a href="../chapter/11-1.html">C-0 日记录</a></li>
+                                <li><a href="../chapter/11-2.html">C-1 哥妹俩</a></li>
+                                <li><a href="../chapter/11-3.html">C-2 关于Online</a></li>
+                                <li><a href="../chapter/11-4.html">C-3 新世界</a></li>
                             </ul>
                         </div>
                         <div style="clear: both;"></div>
                         <div class="volume">
                             <h3>第二节点 过往</h3>
                             <ul>
-                                <li><a href="../chapter/15.html">C-4 虚无理论</a></li>
-                                <li><a href="../chapter/16.html">C-5 新量子计算机</a></li>
+                                <li><a href="../chapter/11-5.html">C-4 虚无理论</a></li>
+                                <li><a href="../chapter/11-6.html">C-5 新量子计算机</a></li>
                             </ul>
                         </div>
                         <div style="clear: both;"></div>
                         <div class="volume">
                             <h3>第三节点 现在</h3>
                             <ul>
-                                <li><a href="../chapter/17.html">C-6 第二世界</a></li>
-                                <li><a href="../chapter/18.html">C-7 虚无未来</a></li>
-                                <li><a href="../chapter/19.html">C-8 关于提案</a></li>
+                                <li><a href="../chapter/11-7.html">C-6 第二世界</a></li>
+                                <li><a href="../chapter/11-8.html">C-7 虚无未来</a></li>
+                                <li><a href="../chapter/11-9.html">C-8 关于提案</a></li>
                             </ul>
                         </div>
                         <div style="clear: both;"></div>
