--- a/book/10.html
+++ b/book/10.html
@@ -54,7 +54,7 @@
 						<a href="../chapter/10-1.html" class="button">开始阅读</a>
 						<a href="#" class="button">加入书架</a>
 						<a href="https://code.xueersi.com/ide/code/21460930" target="_blank" class="button">数据分析</a>
-						<a href="../txt/10.txt" download="冰清玉洁.txt" class="button">txt文本下载</a>
+						<a href="https://sanqianzzz.github.io/xingchen/txt/10.txt" download="冰清玉洁.txt" class="button">txt文本下载</a>
 					</div>
 					<div style="clear: both;"></div>
 					<div id="chapter">
