--- a/book/11.html
+++ b/book/11.html
@@ -53,6 +53,8 @@
 						<p>曾几何时，我设想过一个世界。<br />那是一个能让我任意修改的世界。</p>
 						<a href="../chapter/11-1.html" class="button">开始阅读</a>
 						<a href="#" class="button">加入书架</a>
+						<a href="https://code.xueersi.com/ide/code/21460930" target="_blank" class="button">数据分析</a>
+						<a href="https://sanqianzzz.github.io/xingchen/txt/11.txt" download="层世界.txt" class="button">txt文本下载</a>
 					</div>
 					<div style="clear: both;"></div>
 					<div id="chapter">
