--- a/book/10.html
+++ b/book/10.html
@@ -72,6 +72,7 @@
 								<li><a href="../chapter/10-2.html">第二章 重生</a></li>
 								<li><a href="../chapter/10-3.html">第三章 上学</a></li>
 								<li><a href="../chapter/10-4.html">第四章 陆修洁</a></li>
+								<li><a href="../chapter/10-5.html">第五章 迟到</a></li>
 							</ul>
 						</div>
 						<div style="clear: both;"></div>
